@@ -4,34 +4,33 @@ import com.github.saphyra.apphub.lib.common_domain.ErrorCode;
 import com.github.saphyra.apphub.lib.common_domain.ErrorResponse;
 import com.github.saphyra.apphub.lib.common_domain.ErrorResponseWrapper;
 import com.github.saphyra.apphub.lib.common_util.collection.CollectionUtils;
-import com.github.saphyra.apphub.lib.error_report.ErrorReporterService;
 import com.github.saphyra.apphub.lib.error_handler.service.translation.ErrorResponseFactory;
+import com.github.saphyra.apphub.lib.error_report.ErrorReporterService;
 import com.github.saphyra.apphub.lib.exception.ExceptionFactory;
 import com.github.saphyra.apphub.lib.exception.LoggedException;
 import com.github.saphyra.apphub.lib.exception.NotLoggedException;
 import com.github.saphyra.apphub.lib.exception.ReportedException;
 import feign.FeignException;
 import feign.Request;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class ErrorHandlerAdviceTest {
     private static final String CONTENT = "content";
-    private static final String HEADER_KEY = "header-key";
     private static final String HEADER_VALUE = "header-value";
 
     @Mock
@@ -55,28 +54,24 @@ public class ErrorHandlerAdviceTest {
     @Mock
     private ErrorResponseWrapper errorResponseWrapper;
 
-    @Before
-    public void setUp() {
-        given(errorResponseWrapper.getErrorResponse()).willReturn(errorResponse);
-        given(errorResponseWrapper.getStatus()).willReturn(HttpStatus.BAD_GATEWAY);
-    }
-
     @Test
     public void feignException() {
         given(feignException.contentUTF8()).willReturn(CONTENT);
         given(feignException.status()).willReturn(400);
         given(feignException.request()).willReturn(request);
-        given(feignException.responseHeaders()).willReturn(CollectionUtils.singleValueMap(HEADER_KEY, Arrays.asList(HEADER_VALUE)));
+        given(feignException.responseHeaders()).willReturn(CollectionUtils.singleValueMap("content-type", Arrays.asList(HEADER_VALUE)));
 
         ResponseEntity<?> result = underTest.feignException(feignException);
 
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
         assertThat(result.getBody()).isEqualTo(CONTENT);
-        assertThat(result.getHeaders()).containsEntry(HEADER_KEY, Arrays.asList(HEADER_VALUE));
+        assertThat(result.getHeaders()).containsEntry("content-type", List.of(HEADER_VALUE));
     }
 
     @Test
     public void notLoggedException() {
+        given(errorResponseWrapper.getErrorResponse()).willReturn(errorResponse);
+        given(errorResponseWrapper.getStatus()).willReturn(HttpStatus.BAD_GATEWAY);
         given(errorResponseFactory.create(HttpStatus.NOT_FOUND, ErrorCode.GENERAL_ERROR, new HashMap<>())).willReturn(errorResponseWrapper);
 
         ResponseEntity<ErrorResponse> result = underTest.notLoggedException((NotLoggedException) ExceptionFactory.notLoggedException(HttpStatus.NOT_FOUND, ErrorCode.GENERAL_ERROR, "message"));
@@ -87,6 +82,8 @@ public class ErrorHandlerAdviceTest {
 
     @Test
     public void loggedException() {
+        given(errorResponseWrapper.getErrorResponse()).willReturn(errorResponse);
+        given(errorResponseWrapper.getStatus()).willReturn(HttpStatus.BAD_GATEWAY);
         given(errorResponseFactory.create(HttpStatus.NOT_FOUND, ErrorCode.GENERAL_ERROR, new HashMap<>())).willReturn(errorResponseWrapper);
 
         ResponseEntity<ErrorResponse> result = underTest.loggedException((LoggedException) ExceptionFactory.loggedException(HttpStatus.NOT_FOUND, ErrorCode.GENERAL_ERROR, "message"));
@@ -97,6 +94,8 @@ public class ErrorHandlerAdviceTest {
 
     @Test
     public void reportedException() {
+        given(errorResponseWrapper.getErrorResponse()).willReturn(errorResponse);
+        given(errorResponseWrapper.getStatus()).willReturn(HttpStatus.BAD_GATEWAY);
         given(errorResponseFactory.create(HttpStatus.NOT_FOUND, ErrorCode.GENERAL_ERROR, new HashMap<>())).willReturn(errorResponseWrapper);
 
         ReportedException exception = (ReportedException) ExceptionFactory.reportedException(HttpStatus.NOT_FOUND, ErrorCode.GENERAL_ERROR, "message");
